style.css
* {
  box-sizing: border-box;
  font-family: 'Lato', sans-serif;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
}

/* Add styles here! */

header {
  height: 50%;
  border-bottom: 5px solid hsl(0deg, 0%, 40%);
}

.max-width-wrapper {
  max-width: 50%;
  margin: 0px auto;
}

strong {
  color: hsl(160deg, 100%, 30%)
}

main {
  height: 50%;
  background-color: hsl(0deg, 0%, 60%);
}

.card {
  background-color: hsl(0deg, 0%, 100%);
  border-bottom: 5px solid hsl(0deg, 0%, 40%);
}

